# jellyfin-pi

./: .env.example  .gitignore  CODEX_CONTEXT.md  Cargo.toml  FEATURE-PLAN.md  JELLYFIN_UI_SPEC.md  README.md  _audit-todo.md  build-arm64.sh  build-pi5.sh  build.rs  cec-keyboard-bridge.py  fix-hdmi-audio.sh  flex-launcher-config.ini  go-home.sh  home-button-daemon.py  install.sh  jellyfinmediaplayer.conf  jmp-ctl-launch.sh  jmp-ctl.py  jmp-force-local.py  jmp-mpv.conf  labwc-autostart  launch-jmp.sh  mpv.conf  patch-systemcomponent.sh  show-jellyfin.sh  show-moonlight.sh  switch-pro-tv.gamecontroller.amgp  switch-pro-virtual.json.bak  unified-controller.py  unified-controller.service  vlc-bridge.py
.githooks/: pre-commit  pre-push
CMakeModules/: FindVLC.cmake  PlayerConfiguration.cmake
automation/: LOOP_PROMPT.md  capture-jellyfin-reference.js  codex-jellyfinpi-loop.sh  codex-jellyfinpi-loop.sh.bak-20260422-003110  codex-pi-media-player-loop.sh  compare-parity.sh  e2e-visual-test.sh
native/: inputPlugin.js  nativeshell.js  vlcVideoPlayer.js
resources/: vlc-bridge-inject.js  vlc-play-button-inject.js
scripts/: audio-heal.sh  bandwidth-measure.sh  check-no-secrets.sh  flex-launcher-heal.sh  install-git-hooks.sh  jellyfin-buffer.sh  jellyfin-cron.sh  jellyfin-launch.sh  jmp-heal.sh  measure-streaming-bw.sh  media-qos.sh  media-stream-server.py  streaming-health.sh
src/: CMakeLists.txt  audio.rs  config.rs  device_profile.rs  focus.rs  main.cpp  main.cpp.bak  main.rs  mpris.rs  power.rs  queue.rs  segments.rs  state.rs  system.rs  tracking.rs  trickplay.rs
(+76 files in other folders)
